# Robotics-TU-Berlin

Assignment 0/AbhirajBishnoi_Assignment0/: SpringDamperMass.cpp  SpringDamperMass.h  SpringMass.cpp  SpringMass.h  main.cpp
Assignment 1/1/: CMakeLists.txt  Readme.md
Assignment 1/1/controlDLL/: control.cpp
Assignment 1/Fri_1B_ex1/: control.cpp  gains_1.txt
Assignment 2/Fri_2K_ex2/: control.cpp  forwardkinematics.cpp  forwardkinematics.hpp  gains_1.txt
Assignment 2/forwardkinematics/: forwardkinematics.cpp
Assignment 3/3/: CMakeLists.txt  Readme.md  git_revision_hash
Assignment 3/3/controlDLL/: control.cpp
Assignment 3/3/cv/: cv_control.cpp  cv_control.h  cv_main.cpp  cv_main.h
Assignment 3/3_Fri_B_Assignment3/: cv_control.cpp  gains_3.txt
Assignment 4/: MappingNode.cpp  ParticleFilter.cpp
Assignment 4/additional bag/: per-fernsteuerung-abgefahrene-map.m4v  wiederholte-localization-auf-ganzer-map.m4v
Assignment 4/workspace_assignment4/src/: localization.vcg
Assignment 4/workspace_assignment4/src/create_gui/: CMakeLists.txt  mainpage.dox  package.xml
Assignment 4/workspace_assignment4/src/create_gui/include/create_gui/: MapScrolledWindow.h  RosDrawer.h  RosGoalSelect.h  RosLaserDrawer.h  RosPathDrawer.h  RosPointCloudDrawer.h  RosPoseArrayDrawer.h  RosPoseDrawer.h  RosRobotDrawer.h  RosRobotPathDrawer.h  ScrolledImageComponent.h  create_move.h  create_status.h
Assignment 4/workspace_assignment4/src/create_gui/include/icons/: go-down.xpm  go-up.xpm  rotate-left.xpm  rotate-right.xpm
Assignment 4/workspace_assignment4/src/create_gui/src/: CMakeLists.txt  ScrolledImageComponent.cpp  button_move_wx.cpp  create_move.cpp  create_status.cpp  map_planner.cpp  map_view.cpp
Assignment 4/workspace_assignment4/src/localization/: CMakeLists.txt  mainpage.dox  maze.pgm  maze.yaml  maze_localize.bag  package.xml
Assignment 4/workspace_assignment4/src/localization/include/localization/: ParticleFilter.h  Util.h
Assignment 4/workspace_assignment4/src/localization/launch/: mcl.launch  mcl_navigation.launch
Assignment 4/workspace_assignment4/src/localization/msg/: PoseWithWeight.msg  PoseWithWeightArray.msg  PoseWithWeightStamped.msg
Assignment 4/workspace_assignment4/src/localization/src/: ParticleFilter.cpp  ParticleFilterNode.cpp  Util.cpp
Assignment 4/workspace_assignment4/src/localization/srv/: SetInitialPose.srv
Assignment 4/workspace_assignment4/src/mapping/: CMakeLists.txt  mapping.launch  maze_corridor.bag  package.xml
Assignment 4/workspace_assignment4/src/mapping/src/: MappingNode.cpp
Assignment 4/workspace_assignment4/src/rbo_create/: CMakeLists.txt  package.xml
Assignment 4/workspace_assignment4/src/rbo_create/src/: driver.py  test.py
Assignment 4/workspace_assignment4/src/rbo_create/srv/: ResetOdom.srv  Tank.srv
Assignment 5/Robotics_Assignment5/deliverables/: trajectory.txt
Assignment 5/Robotics_Assignment5/src/: CMakeLists.txt  README.txt  RrtConConBase.cpp  RrtConConBase.h  TutorialPlanSystem.cpp  TutorialPlanSystem.h  YourPlanner.cpp  YourPlanner.h  YourSampler.cpp  YourSampler.h  tutorialPlan.cpp
Assignment 5/Robotics_Assignment5/src/Modules/: FindEigen.cmake  FindSoQt.cmake
Assignment 5/Robotics_Assignment5/src/qt_visualization/: QtPlanningThread.cpp  QtPlanningThread.h  QtViewer.cpp  QtViewer.h  QtWindow.cpp  QtWindow.h  benchmark.csv
Assignment 5/Robotics_Assignment5/src/xml/rlkin/: unimation-puma560.xml
Assignment 5/Robotics_Assignment5/src/xml/rlsg/: boxes.wrl  unimation-puma560-rbo_wall.wrl  unimation-puma560-rbo_wall.xml  unimation-puma560_boxes.convex.wrl  unimation-puma560_boxes.wrl  wall-boxes-rbo.wrl  wall-rbo.wrl
Assignment 5/Robotics_Assignment5/src/xml/rlsg/unimation-puma560/: link0.wrl  link1.wrl  link2.wrl  link3.wrl  link4.wrl  link5.wrl  link6-box.wrl  link6.wrl  unimation-puma560-rbo.wrl
