<?xml version="1.0"?>
<package>
  <name>create_gui</name>
  <version>0.0.0</version>
  <description>GUI to interact and control the iCreate robot</description>

  <author>Clemens Eppner</author>
  <maintainer email="clemens.eppner@tu-berlin.de"></maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/create_gui</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rbo_create</build_depend>
  <build_depend>localization</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>std_srvs</run_depend>

  <run_depend>rbo_create</run_depend>
  <run_depend>localization</run_depend>

</package>
